Doc/force-app/main/default/objects/sbaa__Approval__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created w.r.t BIZ-69286</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Approvals</relationshipLabel>
    <relationshipName>Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>