Doc/force-app/main/default/objects/sbaa__Approval__c/fields/Approval_Received__c.field-meta.xml
<CustomField>
    <fullName>Approval_Received__c</fullName>
    <description>Automatically populated when the approval status changes to Approved. Created as part of BIZ-73147.</description>
    <label>Approval Received</label>
    <type>DateTime</type>
</CustomField>