Doc/force-app/main/default/objects/sbaa__Approval__c/fields/Approval_Requested__c.field-meta.xml
<CustomField>
    <fullName>Approval_Requested__c</fullName>
    <description>Automatically populated when the approval status changes to Requested. Created as part of BIZ-73147.</description>
    <label>Approval Requested</label>
    <type>DateTime</type>
</CustomField>