Doc/force-app/main/default/objects/sbaa__Approval__c/fields/Approved_Rejected_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Approved_Rejected_By_Name__c</fullName>
    <formula>IF( 
	ISPICKVAL(sbaa__Status__c,&apos;Approved&apos;) ,  
	IF(AND(NOT(ISBLANK(sbaa__ApprovedBy__r.FirstName)),NOT(ISNULL(sbaa__ApprovedBy__r.FirstName))), 
		sbaa__ApprovedBy__r.FirstName + &apos; &apos;, 
		&apos;&apos;
	) + &apos;&apos; + 
	IF(AND(NOT(ISBLANK(sbaa__ApprovedBy__r.LastName)),NOT(ISNULL(sbaa__ApprovedBy__r.LastName))), 
		sbaa__ApprovedBy__r.LastName, 
		&apos;&apos;
	),
	sbaa__Approver__r.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved/Rejected By Name</label>
    <type>Text</type>
</CustomField>