Doc/force-app/main/default/objects/sbaa__Approval__c/fields/Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Time__c</fullName>
    <description>Field to hold the time component of Created Date. Created as part of BIZ-68126</description>
    <formula>TIMEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date Time</label>
    <type>Time</type>
</CustomField>