Doc/force-app/main/default/objects/sbaa__Approval__c/fields/Last_Modified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date_Time__c</fullName>
    <description>Field to hold the time component of Last Modified Date. Created as part of BIZ-68126</description>
    <formula>TIMEVALUE( LastModifiedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified Date Time</label>
    <type>Time</type>
</CustomField>