Doc/force-app/main/default/objects/sbaa__Approval__c/fields/OP4I_System_Id__c.field-meta.xml
<CustomField>
    <fullName>OP4I_System_Id__c</fullName>
    <label>OP4I System Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>