Doc/force-app/main/default/objects/sbaa__Approval__c/fields/Quote_Approval_Request_Notes__c.field-meta.xml
<CustomField>
    <fullName>Quote_Approval_Request_Notes__c</fullName>
    <label>Quote Approval Request Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>