Doc/force-app/main/default/objects/sbaa__Approval__c/listViews/Items_to_approve.listView-meta.xml
<ListView>
    <fullName>Items_to_approve</fullName>
    <columns>Quote__c</columns>
    <columns>NAME</columns>
    <columns>sbaa__Approver__c</columns>
    <columns>sbaa__Actions__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sbaa__Status__c</field>
        <operation>equals</operation>
        <value>Requested</value>
    </filters>
    <label>Items to approve</label>
</ListView>